moved buttons to bottom, fixed spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ body {
     background-attachment: fixed;
 }
 
-#results .card {
+#results .card, #buttons {
     max-width: 75%;
     margin: 0 auto 10px;
     border-radius: 4px;
@@ -106,7 +106,6 @@ body {
 }
 
 #next, #again, #prev-btn {
-    margin-left: 3rem;
     margin-bottom: 1rem;
-    width:20%;
+    width:25%;
 }
